# rsTFHE

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  deploy.gh-pages.sh  docs
HomNAND/: .gitignore  Makefile  a.out  perf.py  pyproject.toml  sample.c
HomNAND/homnand/: __init__.py  params.py  tlwe.py  torus.py  trgsw.py  trlwe.py  util.py
HomNAND/tests/: test_homnand.py  test_tlwe.py  test_torus.py  test_trgsw.py  test_trlwe.py
benches/: homnand.rs
examples/: homnand.rs  rustfft.rs  spqlios.rs
feature=default nand(false, true)/base/: benchmark.json  sample.json
feature=default nand(false, true)/new/: estimates.json  tukey.json
feature=fft nand(false, true)/base/: estimates.json  tukey.json
feature=fft nand(false, true)/report/: index.html
feature=spqlios nand(false, true)/new/: sample.json
feature=spqlios nand(false, true)/report/: index.html
nand(false, true)/base/: benchmark.json  tukey.json
nand(false, true)/new/: raw.csv
nand(false, true)/report/: index.html
nand/new/: benchmark.json
nand/report/: index.html
rsTFHE/: Cargo.toml
rsTFHE/src/: blind_rotate.rs  key_switch.rs  lib.rs  main.rs  nand.rs  params.rs  tlwe.rs  torus.rs  trgsw.rs  trlwe.rs
rsTFHE/src/blind_rotate/: tests.rs
rsTFHE/src/key_switch/: tests.rs
rsTFHE/src/tlwe/: tests.rs
rsTFHE/src/trlwe/: tests.rs
src/: blind_rotate.rs  lib.rs  main.rs  nand.rs  params.rs  spqlios.rs  tlwe.rs  torus.rs  trgsw.rs  trlwe.rs
src/blind_rotate/: tests.rs
src/cpp/: fft_processor_spqlios.cpp  my-test  my-test.cpp  spqlios-bench  spqlios-bench.cpp  spqlios-fft-impl.cpp  spqlios-fft.h  test  todo.sh
src/nand/: tests.rs
src/torus/: tests.rs
src/trgsw/: tests.rs
src/trlwe/: tests.rs
