[package]
name = "rsTFHE"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fft = ["rustfft"]

[lib]
crate-type = ["lib"]
[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
rand = "*"
rand_distr = "*"
lazy_static = "1.4.0"
rustfft = { version = "^4", optional = true}

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
