[package]
name = "rsTFHE"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fft = ["rustfft"]

[lib]
crate-type = ["lib"]

[dependencies]
rand = "*"
rand_distr = "*"
lazy_static = "1.4.0"
rustfft = { version = "^4", optional = true}

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
criterion = "0.2"

[[bench]]
name = "homnand"
harness = false
