[package]
name = "rsTFHE"
version = "0.1.0"
authors = ["hamadakafu <kafu.h1998@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
fft = ["rustfft"]
spqlios = []

[lib]
crate-type = ["lib"]

[dependencies]
rand = "*"
rand_distr = "*"
rustfft = { version = "^4", optional = true}
once_cell = "*"

[dev-dependencies]
quickcheck = "*"
quickcheck_macros = "*"
criterion = "0.2"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[[bench]]
name = "homnand"
harness = false
