[tool.poetry]
name = "HomNAND"
version = "0.1.0"
description = ""
authors = ["hamadakafu <kafu.h1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
hypothesis = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jedi = "^0.17.2"
rope = "*"
black = {version = "*", allow-prereleases = true}
pytest-xdist = "*"

[tool.poetry.scripts]
main = "homnand:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
